--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.9.3",
     "chartist": "0.10.1",
     "keycloak-js": "^4.8.3",
     "material-table": "^1.50.0",
@@ -17,6 +18,7 @@
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "0.13.3",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-google-maps": "9.4.5",
     "react-notification-system": "0.2.17",
